[project]
name = "cell-neighbors"
version = "0.0.2+dev"
description = "voyager-based kNN for single-cell data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adata-query",
    "anndata",
    "scanpy",
    "voyager",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_neighbors"]
