[project]
name = "cell-neighbors"
version = "0.0.2+dev"
description = "voyager-based kNN for single-cell data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adata-query>=0.2.1",
    "anndata",
    "scanpy",
    "voyager",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_neighbors"]
